# llvm-project

mlir/: CMakeLists.txt
mlir/cmake/modules/: AddMLIR.cmake
mlir/examples/toy/Ch6/: CMakeLists.txt
mlir/examples/toy/Ch7/: CMakeLists.txt
mlir/lib/Analysis/: CMakeLists.txt
mlir/lib/Conversion/AffineToStandard/: CMakeLists.txt
mlir/lib/Conversion/GPUToCUDA/: CMakeLists.txt
mlir/lib/Conversion/GPUToNVVM/: CMakeLists.txt
mlir/lib/Conversion/GPUToROCDL/: CMakeLists.txt
mlir/lib/Conversion/GPUToSPIRV/: CMakeLists.txt
mlir/lib/Conversion/LinalgToLLVM/: CMakeLists.txt
mlir/lib/Conversion/LoopToStandard/: CMakeLists.txt
mlir/lib/Conversion/LoopsToGPU/: CMakeLists.txt
mlir/lib/Conversion/StandardToLLVM/: CMakeLists.txt
mlir/lib/Conversion/StandardToSPIRV/: CMakeLists.txt
mlir/lib/Conversion/VectorToLLVM/: CMakeLists.txt
mlir/lib/Conversion/VectorToLoops/: CMakeLists.txt
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/AffineOps/: CMakeLists.txt
mlir/lib/Dialect/FxpMathOps/: CMakeLists.txt
mlir/lib/Dialect/GPU/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/: CMakeLists.txt
mlir/lib/Dialect/Linalg/: CMakeLists.txt
mlir/lib/Dialect/LoopOps/: CMakeLists.txt
mlir/lib/Dialect/QuantOps/: CMakeLists.txt
mlir/lib/Dialect/SDBM/: CMakeLists.txt
mlir/lib/Dialect/SPIRV/: CMakeLists.txt
mlir/lib/Dialect/SPIRV/Serialization/: CMakeLists.txt
mlir/lib/Dialect/SPIRV/Transforms/: CMakeLists.txt
mlir/lib/Dialect/StandardOps/: CMakeLists.txt
mlir/lib/Dialect/VectorOps/: CMakeLists.txt
mlir/lib/EDSC/: CMakeLists.txt
mlir/lib/ExecutionEngine/: CMakeLists.txt
mlir/lib/IR/: CMakeLists.txt
mlir/lib/Parser/: CMakeLists.txt
mlir/lib/Pass/: CMakeLists.txt
mlir/lib/Quantizer/: CMakeLists.txt
mlir/lib/Support/: CMakeLists.txt
mlir/lib/TableGen/: CMakeLists.txt
mlir/lib/Transforms/: CMakeLists.txt
mlir/lib/Transforms/Utils/: CMakeLists.txt
mlir/lib/Translation/: CMakeLists.txt
mlir/test/Dialect/SPIRV/: CMakeLists.txt
mlir/test/lib/IR/: CMakeLists.txt
mlir/test/lib/Pass/: CMakeLists.txt
mlir/test/lib/TestDialect/: CMakeLists.txt
mlir/test/lib/Transforms/: CMakeLists.txt
mlir/test/mlir-cpu-runner/: CMakeLists.txt
mlir/tools/mlir-cpu-runner/: CMakeLists.txt
mlir/tools/mlir-cuda-runner/: CMakeLists.txt
mlir/tools/mlir-opt/: CMakeLists.txt
